# my-github-actions-demo

./:  pyproject.toml  .env.example  changeForstack.txt  index.js  package-lock.json  package.json  pyproject.toml  setup-aws-secrets.sh
.github/: CODEOWNERS
.github/actions/project-ci/: action.yml
.github/workflows/: ci.yml  test-steps.yml
src/my_github_actions_demo/: __init__.py  app.py  aws_config.py
src/my_github_actions_demo.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_app.py  test_aws_config.py
